--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light ">
-    <a class="navbar-brand" href=""><img src="images/img13.png" height="80" width="100" class="d-inline-block align-text-bottom" >
+    <a class="navbar-brand" href=""><img src="img13.png" height="80" width="100" class="d-inline-block align-text-bottom" >
       <b>Careerfy</b>
     </a>
    
